Fixing up core elements
Some tweaks made here need to be pushed upstream to the style kit.

In particular ensuring the typical:

- cookie-notice
- navbar
- (testing banner)
- (site development phase)

element stack works nicely together (currently things don’t line up properly).

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -11,15 +11,27 @@ $screen-sm-min: 768px !default;
 // Styles for Better banner - these will be merged into a future version of the BAS Style Kit
 
 $beta-phase: #f47738;
+// Styles for topic table of contents
 
 .bsk-docs-label-phase-beta {
   background-color: $beta-phase;
   border-radius: 0;
+#markdown-toc {
+  padding-left: 20px;
 }
 
 // Styles for Cookie banner - these will be merged into a future version of the BAS Style Kit
+// Styles for cookie notice
+.bsk-docs-cookie-notice {
+  // Fix padding to align banner with navbar
+  .bsk-container {
+    padding-left: 0;
+  }
+}
 
 .bsk-docs-alert-top-pin {
+// Styles for navbar
+.bsk-docs-navbar-testing {
   margin-bottom: 0;
 
   border: none;
@@ -43,13 +55,26 @@ $beta-phase: #f47738;
       filter: alpha(opacity=100);
       opacity: 1;
     }
+// Styles for testing banner
+.bsk-docs-banner-testing {
+  // Fix padding to align banner with navbar
+  .bsk-container {
+    padding-left: 0;
   }
 }
 
 // Styles for topic table of contents
+// Styles for site development notice
+.bsk-docs-development-notice {
+  margin-top: 20px;
 
 #markdown-toc {
   padding-left: 20px;
+  // These styles for using text alongside a label
+  .bsk-docs-text-with-label {
+    position: relative;
+    top: 3px;
+  }
 }
 
 // Styles for footer
